<resources>
    <string name="app_name" translatable="false">Comment vais-je</string>
    <string name="main_screen_title">I test my mental health</string>
    <string name="main_screen_text">By answering 20 questions about your current mental state</string>
    <string name="main_screen_username_hint">Enter your username</string>
    <string name="main_screen_button_start">Start</string>
    <string name="main_screen_logo_description">A logo with a heart shape and text around saying \"comment vais-je\"</string>
    <string name="personal_screen_title">Tell us about yourself</string>
    <string name="personal_screen_gender_question">You are...</string>
    <string name="personal_screen_age_question">How old are you?</string>
    <string name="personal_screen_weight_question">What is your weight (in Kg)</string>
    <string name="personal_screen_height_question">What is your height? (in Cm)</string>
    <string name="personal_screen_married_question">Are you married?</string>
    <string name="personal_screen_man_choice">A man</string>
    <string name="personal_screen_woman_choice">A woman</string>
    <string name="global_next">Next</string>
    <string name="global_yes">Yes</string>
    <string name="global_no">No</string>
    <string name="global_man">Man</string>
    <string name="global_woman">Woman</string>
    <string name="global_previous">Previous</string>
    <string name="section1_page1_screen_feeling_question">How are you feeling today?</string>
    <string name="global_good">Good</string>
    <string name="global_fairly_good">Fairly good</string>
    <string name="global_neutral">Neutral</string>
    <string name="global_very_good">Very good</string>
    <string name="global_not_good">Not good</string>
    <string name="section1_page1_screen_not_stressed">Not stressed</string>
    <string name="section1_page1_screen_extreamly_stressed">Extreamly stressed</string>
    <string name="section1_page1_screen_stressed_question">How stressed are you?</string>
    <string name="section1_page1_screen_tired">How often do you feel tired</string>
    <string name="global_not_much">Not much</string>
    <string name="global_pretty_often">Pretty often</string>
    <string name="global_all_the_time">All the time</string>
    <string name="section1_page2_screen_nothing_ruin_day">Nothing can get through me</string>
    <string name="section1_page2_screen_ruin_day">The slightest things could ruin my day</string>
    <string name="section1_page2_screen_anger_management">How is your anger management?</string>
    <string name="section1_page2_screen_anger_feeling">Do you often feel desperate, Angry or irritated?</string>
    <string name="section2_title_screen_title">Show us your reactions</string>
    <string name="global_occasionally">Occasionally</string>
    <string name="global_rarely">Rarely</string>
    <string name="global_regularly">Regularly</string>
    <string name="global_insomnia">Insomnia</string>
    <string name="global_normal">Normal</string>
    <string name="global_exit">Exit</string>
    <string name="section1_title_screen_title">Tell us about your feelings</string>
    <string name="section2_title_screen_warning">WARNING! the next section might contain triggering images therefore optional.</string>
    <string name="global_skip">Skip</string>
    <string name="section2_global_feeling_image">What emotion does this image cause?</string>
    <string name="section2_global_indication">Choose the emoji that best reprents your emotion</string>
    <string name="global_happy">Happy</string>
    <string name="global_sad">Sad</string>
    <string name="global_scared">Scared</string>
    <string name="global_angry">Angry</string>
    <string name="section2_page1_description">Man on the edge of a building</string>
    <string name="section2_page2_description">Man stuck in a tight space</string>
    <string name="section2_rorcharch_description">Rorcharch test</string>
    <string name="section2_global_describe_feelings">Describe what this image represents</string>
    <string name="global_enter_text">Enter your text here...</string>
    <string name="section3_title_screen_title">Tell us about your physical health</string>
    <string name="section3_page1_screen_know_blood_pressure">Do you know your blood pressure?</string>
    <string name="section3_page1_screen_blood_pressure">Please, input your blood pressure (in mm Hg)</string>
    <string name="section3_page1_screen_know_cholesterol">Do you know your Cholesterol?</string>
    <string name="section3_page1_screen_cholesterol">Please, input your cholesterol (in mmol/L)</string>
    <string name="section3_page1_screen_know_blood_sugar">Do you know your blood sugar?</string>
    <string name="section3_page1_screen_blood_sugar">Please, input your blood sugar (in g/L)</string>
    <string name="global_view_summary">View summary</string>
    <string name="main_screen_username_missing">Please, input your username...</string>
    <string name="global_missing_inputs">Please, make sure to fill all the inputs</string>
    <string name="summary_screen_section1_title">Personal Information</string>
    <string name="summary_screen_gender">Gender:</string>
    <string name="summary_screen_username">Username:</string>
    <string name="summary_screen_gender_man">Man</string>
    <string name="summary_screen_gender_woman">Woman</string>
    <string name="summary_screen_age">Age:</string>
    <string name="summary_screen_years_old">years old</string>
    <string name="summary_screen_weight">Weight:</string>
    <string name="summary_screen_kg" translatable="false">Kg</string>
    <string name="summary_screen_height">Height:</string>
    <string name="summary_screen_cm" translatable="false">Cm</string>
    <string name="summary_screen_married">Married:</string>
    <string name="summary_screen_today_feeling">Today you feel:</string>
    <string name="summary_screen_stress_level">Stress level:</string>
    <string name="summary_screen_feeling_tired">You feel tired:</string>
    <string name="summary_screen_anger_frequency">You feel angry/desperate/irritated</string>
    <string name="summary_screen_out_of">times out of</string>
    <string name="summary_screen_anger_management">Your anger management is:</string>
    <string name="global_reaction_happy">Happy</string>
    <string name="summary_screen_reaction_img_1">Your reaction to the first image:</string>
    <string name="summary_screen_reaction_img_2">Your reaction to the 2nd image:</string>
    <string name="summary_screen_rorschach_description">Your description of the Rorschach test n°</string>
    <string name="summary_screen_blood_pressure">Blood pressure</string>
    <string name="global_mm_hg" translatable="false">mm Hg</string>
    <string name="global_mmol_l" translatable="false">mmol/L</string>
    <string name="global_g_l" translatable="false">g/L</string>
    <string name="summary_screen_cholesterol">Cholesterol</string>
    <string name="summary_screen_blood_sugar">Blood sugar</string>
    <string name="summary_screen_personal">Personal Information</string>
    <string name="summary_screen_feelings">Your feelings</string>
    <string name="summary_screen_reactions">Your reactions</string>
    <string name="summary_screen_your_physical">Your physical health</string>
    <string name="summary_screen_save">Save</string>
    <string name="summary_screen_file_saved">Fichier enregistré dans le dossier Téléchargements</string>
    <string name="summary_screen_send_email">Send it via email</string>
</resources>