<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_img"
        android:layout_width="211dp"
        android:layout_height="256dp"
        android:contentDescription="@string/main_screen_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_no_background" />

    <TextView
        android:id="@+id/main_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_screen_title"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_img" />

    <TextView
        android:id="@+id/main_screen_text"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_screen_text"
        app:layout_constraintEnd_toEndOf="@+id/main_title_text_view"
        app:layout_constraintStart_toStartOf="@+id/main_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/main_title_text_view" />

    <EditText
        android:id="@+id/main_screen_username_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/main_screen_username_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/main_screen_text"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/main_screen_text"
        app:layout_constraintTop_toBottomOf="@+id/main_screen_text" />

    <Button
        android:id="@+id/main_screen_btn_start"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginBottom="72dp"
        android:background="@color/logo_color"
        android:onClick="start"
        android:text="@string/main_screen_button_start"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>