<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Summary">

    <TextView
        android:id="@+id/summary_screen_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/global_view_summary"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/summary_screen_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_screen_title_tv">

        <ExpandableListView
            android:id="@+id/summary_screen_summary_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/summary_screen_save"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/logo_color"
        android:text="@string/summary_screen_save"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/summary_screen_exit_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/summary_screen_exit_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/logo_color"
        android:text="@string/global_exit"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/summary_screen_send_email_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@color/logo_color"
        android:text="@string/summary_screen_send_email"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/summary_screen_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/summary_screen_save" />

    <Button
        android:id="@+id/summary_screen_previous_btn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@color/logo_color"
        android:text="@string/global_previous"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/summary_screen_exit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/summary_screen_exit_btn"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>